@@ -4,16 +4,20 @@ EXTRA_DIST = attribute.h common.h extstate.h parseconf.h proto.h	\
 # http://www.gnu.org/software/automake/manual/automake.html#Clean
 BUILT_SOURCES = nut_version.h nut_stdint.h
 DISTCLEANFILES = nut_stdint.h
-CLEANFILES = nut_version.h 
+CLEANFILES = nut_version.h
 
 # magic to include SVN revision number in NUT version string
-SVNREV = $(shell unset LANG && svnversion -n $(top_srcdir) 2>/dev/null)
-NUT_VERSION = $(shell if test "$(SVNREV)" = "exported"; then echo "$(PACKAGE_VERSION)"; else echo "$(PACKAGE_VERSION)-$(SVNREV)"; fi)
 
 nut_version.h: FORCE
-	@echo '/* Autogenerated file. Do not change. */'    > _nut_version.h 
-	@echo '/* This file was generated by "make". */'   >> _nut_version.h
-	@echo '#define NUT_VERSION_MACRO "$(NUT_VERSION)"' >> _nut_version.h
+	@SVNREV=`LANG=C svnversion -n $(top_srcdir) 2>/dev/null`; \
+	if [ -z "$$SVNREV" -o "$$SVNREV" = "exported" ]; \
+		then NUT_VERSION="$(PACKAGE_VERSION)"; \
+		else NUT_VERSION="$(PACKAGE_VERSION)-$$SVNREV"; \
+	fi ; \
+	echo '/* Autogenerated file. Do not change. */'    > _nut_version.h ; \
+	echo '/* This file was generated by "make". */'   >> _nut_version.h ; \
+	echo "#define NUT_VERSION_MACRO \"$$NUT_VERSION\"" >> _nut_version.h ; \
+	echo "NUT_VERSION: \"$$NUT_VERSION\""
 	-test -f nut_version.h || cp _nut_version.h nut_version.h
 	-cmp -s _nut_version.h nut_version.h || cp _nut_version.h nut_version.h
 	-rm -f _nut_version.h
